PySCF 1.6 alpha (2018-09-??)
----------------------------
* Added
  - X2C-UKS (LDA functional only)
  - PBC gamma point ROHF/ROKS and GKS
  - PBC KROHF/KROKS and KGKS for k-point sampling
  - DFT Coulomb and XC integrals with multigrid
  - Periodic UCCSD with k-point sampling
  - perturbative DMRG method
  - Interface to Cornell SHCI
* Improved
  - numint performance (eval_rho, eval_mat)


PySCF 1.5.2
-----------
* Improved
  - IO performance of pbc.GDF initialization
  - Default linear dependence treatment in GDF to improve accuracy
* Bugfix
  - selected_ci 2-particle density matrices for two electron systems


PySCF 1.5.1 (2018-07-01)
------------------------
* Improved
  - the memory usage for a large number of MM particles (issue #193)
* Bugfix
  - Frozen orbitals in MCSCF canonicalization
  - Dimension error when initializing DF-CCSD integral tensor
  - EOM-EE-UCCSD initial guess and intermediates (issue #199)
  - mpi ip/eaccsd w/ frozen orbitals
  - the tdscf.get_nto function when mol.symmetry is enabled (issue #196)
  - the interface between QMMM wrapper and the gradients of post-HF methods


PySCF 1.5 (2018-06-08)
----------------------
* Added
  - Fake PySCF method adapter for arbitrary energy/gradients function in
    berny_solver wrapper
  - Function to restore DIIS object from DIIS file
  - Restart function to restore CCSD calculations
* Improved
  - CASSCF optimization step size
  - State-averaged CASSCF output message
  - RCCSD(T) and UCCSD(T) performance
  - Reduced DIIS memory footprint
  - Frozen orbitals for KRCCSD
  - PBC-TDDFT eigenvalue filter to keeps more eigenvalues which has small
    imaginary part
  - FCI convergence tolerance
  - Conversion between KRHF, KUHF, and KGHF
  - In the SOSCF solver, the diagonalization code to handle singularity in Hessian
  - In the Scanner function, to support an input of geometry (string or list)
  - SCF convergence hook
  - Density_fit hooks in mp2, cisd, and ccsd modules